cncProd/force-app/main/default/objects/Campaign_Member_Vehicle__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Member and Vehicles (Account)</relationshipLabel>
    <relationshipName>Campaign_Member_and_Vehicles1</relationshipName>
    <type>Lookup</type>
</CustomField>