cncProd/force-app/main/default/objects/Campaign_Member_Vehicle__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Member and Vehicles</relationshipLabel>
    <relationshipName>Campaign_Member_and_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>