cncProd/force-app/main/default/objects/Campaign_Member_Vehicle__c/fields/Offboard_Date__c.field-meta.xml
<CustomField>
    <fullName>Offboard_Date__c</fullName>
    <label>Offboard Date</label>
    <type>Date</type>
</CustomField>