cncProd/force-app/main/default/objects/Campaign_Member_Vehicle__c/fields/Offboarded__c.field-meta.xml
<CustomField>
    <fullName>Offboarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offboarded</label>
    <type>Checkbox</type>
</CustomField>